<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/dialog_spinner"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/tag_types"
            android:prompt="@string/select_tagtype"
            />

z
    </LinearLayout>

    <EditText
        android:id="@+id/tagValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/tagValue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogOK"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            tools:ignore="ButtonStyle"
            android:onClick="add"/>

        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"
            android:onClick="cancel"/>
    </LinearLayout>

</LinearLayout>