<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/tag_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tag_types"
            android:prompt="@string/select_tagtype" />


    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/SearchAutoTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="location" />

    <AutoCompleteTextView
        android:id="@+id/auto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="Person"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogSearch"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:onClick="add"
            android:text="@string/search"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/tagCancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>